# cleaner

./: .eslintrc.cjs  .gitignore  Cargo.toml  LICENSE  README.md  components.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
docs/: FolderScannerService.md
plugins/tauri-plugin-filemanager/: Cargo.toml  README.md  package.json  pnpm-lock.yaml
plugins/tauri-plugin-filemanager/android/: build.gradle.kts
plugins/tauri-plugin-filemanager/android/src/androidTest/java/: ExampleInstrumentedTest.kt
plugins/tauri-plugin-filemanager/android/src/main/java/: Example.kt  ExamplePlugin.kt
plugins/tauri-plugin-filemanager/android/src/test/java/: ExampleUnitTest.kt
plugins/tauri-plugin-filemanager/examples/tauri-app/: package.json
plugins/tauri-plugin-filemanager/examples/tauri-app/src/: App.svelte
plugins/tauri-plugin-filemanager/examples/tauri-app/src-tauri/: Cargo.toml
plugins/tauri-plugin-filemanager/examples/tauri-app/src-tauri/capabilities/: default.json
plugins/tauri-plugin-filemanager/examples/tauri-app/src-tauri/src/: lib.rs
plugins/tauri-plugin-filemanager/guest-js/: index.ts
plugins/tauri-plugin-filemanager/ios/: Package.swift  README.md
plugins/tauri-plugin-filemanager/ios/Sources/: ExamplePlugin.swift
plugins/tauri-plugin-filemanager/permissions/autogenerated/: reference.md
plugins/tauri-plugin-filemanager/src/: commands.rs  desktop.rs  lib.rs  mobile.rs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: driver.rs  lib.rs  main.rs  model.rs  service.rs
src-tauri/src/fs/: macos.rs  mod.rs  windows.rs
src-tauri/src/tree/: mod.rs  node.rs
src/assets/: main.css
src/assets/layout/: _core.scss  _topbar.scss  layout.scss
src/components/: FileList.vue  FileStatistics.vue  FolderScanner.vue  FolderSizeView.vue  LanguageSelector.vue  PathNavigator.vue  SelectionSummary.vue
src/i18n/: index.ts  zh.ts
src/layout/: AppConfigurator.vue  AppFooter.vue  AppLayout.vue  AppTopbar.vue
src/layout/composables/: layout.ts
src/locales/: en.json  es.json  ja.json  zh.json
src/router/: index.ts
src/service/: FileSystemService.ts  ScannerService.ts
src/services/: ScannerService.ts
src/types/: fs.ts  index.ts  vue-i18n.d.ts
src/views/: Dashboard.vue
src/views/dashboard/: RecentSalesWidget.vue
src/views/pages/: Empty.vue  Landing.vue
src/views/uikit/: File.vue
