[workspace]
default-members = ["src-tauri"]
members = ["src-tauri"]
resolver = "2"

[workspace.package]
categories = ["network-programming", "asynchronous"]
edition = "2021"
keywords = ["Cleaner"]
license = "MIT OR Apache-2.0"
rust-version = "1.85.0"

[workspace.dependencies]
anyhow = "1.0.22"
arbitrary = { version = "1.0.1", features = ["derive"] }
sysinfo = "0.35.2"
assert_matches = "1.1"
async-io = "2"
async-std = "1.11"
aws-lc-rs = { version = "1.9", default-features = false }
bencher = "0.1.5"
bincode = "1.3"
byte-pool = { git = "https://github.com/neevek/byte-pool" }
bytes = "1"
cfg_aliases = "0.2"
clap = { version = "4", features = ["derive"] }
crc = "3"
dashmap = "6"
directories-next = "2"
futures-io = "0.3.19"
getrandom = { version = "0.3", default-features = false }
hdrhistogram = { version = "7.2", default-features = false }
hex-literal = "0.4"
lazy_static = "1"
log = "0.4"
once_cell = "1.19"
pin-project-lite = "0.2"
proto = { package = "quinn-proto", version = "0.11.9" }
quinn = { version = "0.11.6" }
rand = "0.9"
rcgen = "0.13"
ring = "0.17"
rustc-hash = "2"
rustls = { version = "0.23.5", default-features = false, features = ["std"] }
rustls-pemfile = "2.1"
rustls-pki-types = "1.7"
rustls-platform-verifier = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
slab = "0.4.6"
smol = "2"
socket2 = "0.5"
thiserror = "2.0.3"
tinyvec = { version = "1.1", features = ["alloc"] }
tokio = { version = "1.43.0", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "macros",
    "sync",
] }
tracing = { version = "0.1.10", default-features = false, features = ["std"] }
tracing-futures = { version = "0.2.0", default-features = false, features = [
    "std-future",
] }
tracing-subscriber = { version = "0.3.0", default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
    "time",
    "local-time",
] }
udp = { package = "quinn-udp", version = "0.5.10", features = ["tracing"] }
url = "2"
wasm-bindgen-test = { version = "0.3.45" }
web-time = "1"
windows-sys = { version = ">=0.52, <=0.59", features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_Networking_WinSock",
] }


[profile.dev]
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.bench]
debug = true

[profile.release]
debug = true
