cargo-features = ["profile-rustflags", "trim-paths"]

[workspace]
default-members = ["src-tauri"]
members = ["src-tauri"]
resolver = "2"

[workspace.package]
categories = ["network-programming", "asynchronous"]
edition = "2021"
keywords = ["Cleaner"]
license = "MIT OR Apache-2.0"
rust-version = "1.89.0"

[workspace.dependencies]
anyhow = "1.0.22"
arbitrary = {version = "1.0.1", features = ["derive"]}
assert_matches = "1.1"
async-io = "2"
async-std = "1.11"
aws-lc-rs = {version = "1.9", default-features = false}
bencher = "0.1.5"
bincode = "2.0.1"
byte-pool = {git = "https://github.com/neevek/byte-pool"}
bytes = "1"
cacao = "0.3.2"
cfg_aliases = "0.2"
clap = {version = "4", features = ["derive"]}
cocoa = {version = "0.26.1"}
crc = "3"
dashmap = "6"
directories-next = "2"
futures-io = "0.3.19"
getrandom = {version = "0.3", default-features = false}
hdrhistogram = {version = "7.2", default-features = false}
hex-literal = "1.0.0"
lazy_static = "1"
log = "0.4"
objc2 = {version = "0.6.2"}
objc2-core-foundation = {version = "0.3.1"}
objc2-foundation = {version = "0.3.1"}
once_cell = "1.19"
pin-project-lite = "0.2"
proto = {package = "quinn-proto", version = "0.11.9"}
quinn = {version = "0.11.6"}
rand = "0.9"
rcgen = "0.14.4"
ring = "0.17"
rustc-hash = "2"
rustls = {version = "0.23.5", default-features = false, features = ["std"]}
rustls-pemfile = "2.1"
rustls-pki-types = "1.7"
rustls-platform-verifier = "0.6.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
slab = "0.4.6"
smol = "2"
socket2 = "0.6.0"
sysinfo = "0.37.0"
thiserror = "2.0.3"
tinyvec = {version = "1.1", features = ["alloc"]}
tokio = {version = "1.43.0", features = [
  "rt",
  "rt-multi-thread",
  "time",
  "macros",
  "sync",
]}
tracing = {version = "0.1.10", default-features = false, features = ["std"]}
tracing-futures = {version = "0.2.0", default-features = false, features = [
  "std-future",
]}
tracing-subscriber = {version = "0.3.0", default-features = false, features = [
  "env-filter",
  "fmt",
  "ansi",
  "time",
  "local-time",
]}
udp = {package = "quinn-udp", version = "0.5.10", features = ["tracing"]}
url = "2"
wasm-bindgen-test = {version = "0.3.45"}
web-time = "1"
windows-sys = {version = "0.61.0", features = [
  "Win32_Foundation",
  "Win32_System_IO",
  "Win32_Networking_WinSock",
]}

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
overflow-checks = true
panic = 'unwind'
rpath = false

[profile.bench]
debug = true

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
debug = true 
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
rustflags = ["-Cdebuginfo=0", "-Zthreads=8"] # Better compile performance. 
strip = true # Ensures debug symbols are removed.
trim-paths = "all" # Removes potentially privileged information from your binaries.
