[package]
name = "rs-plugin-test"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]
name = "desktop_lib"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.0", features = ["devtools"] }
tauri-plugin-opener = "2"
thiserror = { workspace = true }
tinyvec = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-futures = { workspace = true }
tracing-subscriber = { workspace = true }
sysinfo = { workspace = true }
udp = { workspace = true }
tauri-plugin-fs = "2.2.0"
tauri-plugin-store = "2.2.0"
tauri-plugin-os = "2.2.1"
tauri-plugin-notification = { version = "2.0.0", features = [
    "windows7-compat",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-shadows = "0.2"
window-vibrancy = "0.6.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]



[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
