[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
name = "rs-plugin-test"
version = "0.1.0"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]
name = "desktop_lib"

[build-dependencies]
tauri-build = {version = "2.2.0", features = [] }

[dependencies]
sysinfo = {workspace = true}
tauri = {version = "2.5.0", features = ["devtools"] }
tauri-plugin-filemanager = {path = "../plugins/tauri-plugin-filemanager"}
tauri-plugin-opener = "2"
tauri-plugin-os = "2.2.1"
tauri-plugin-store = "2.2.0"
thiserror = {workspace = true}
tinyvec = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-futures = {workspace = true}
tracing-subscriber = {workspace = true}
udp = {workspace = true}

serde = {version = "1", features = ["derive"] }
serde_json = "1"
window-shadows = "0.2"
window-vibrancy = "0.6.0"

[target."cfg(target_os = \"macos\")".dependencies]
cacao = {workspace = true}
objc2 = {workspace = true}
objc2-core-foundation = {workspace = true}
objc2-foundation = {workspace = true}

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
